- Adjusted CSS to fix crossbleed with other tabs - Adjusted HTML generation to make use of native classes for formatting - Fixed date calculation for the Last Updated so it shows correct time

--- a/DiagnosticsNewStyle.css
+++ b/DiagnosticsNewStyle.css
@@ -44,19 +44,6 @@
 	z-index: 5;
 }
 
-/*a.GetInfo.Automate.HasText {
-	display: inline-block;
-	width: 13em;
-	text-decoration: inherit;
-	color: #FFF !important;
-	border-radius: 0.2em;
-	padding: 0.4em 0.5em;
-	font-size: 1.0em;
-	font-weight: 500;
-	text-align: left;
-	background-color: #026CCF;
-}*/
-
 #dataTableHeader,
 #dataTableData {
 	border: 0px;
@@ -106,7 +93,6 @@
 	*/
 	font-size: 0.9em;
 	background-color: #252525;
-	color: #FFFFFF;
 	overflow: auto;
 	padding: 0.5em 0em 0em 0.5em;
 	height: 36em;
@@ -151,9 +137,8 @@
 }
 
 /* 2023.01.16 -- Joe McCall | Reduce wasted space */
-
-#tableDetails,
 #dataContainer {
+	width: 100%;
 	margin: 0em 0em 0.2em 0em !important;
 }
 
@@ -174,7 +159,6 @@
 .Automate hr,
 .Automate dt,
 .Automate dd,
-.Automate table
-.Automate pre {
+.Automate table .Automate pre {
 	margin: 0.2em 0em;
 }
